--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,6 @@ kotlinVersion = "1.7.1"
 android = "8.0.2"
 kotlin = "1.7.20"
 ksp = "1.9.0-1.0.12"
-
 androidxCore = "1.10.1"
 androidxLifecycleRuntime = "2.6.1"
 composeActivity = "1.7.2"
@@ -13,16 +12,16 @@ junit = "4.13.2"
 testJunit = "1.1.5"
 espressoCore = "3.5.1"
 uiJunit = "1.4.3"
+hilt = "2.47"
+kapt = "1.9.0"
+retrofit = "2.9.0"
+moshi = "2.4.0"
+sqlDelightVersion = "2.0.0-rc02"
 
 
 #***************************************************************************************************
 
 [libraries]
-#sqldelight-runtime = { module = "app.cash.sqldelight:runtime", version.ref = "sqlDelightVersion" }
-#sqldelight-android-driver = { module = "app.cash.sqldelight:android-driver", version.ref = "sqlDelightVersion" }
-#sqldelight-native-driver = { module = "app.cash.sqldelight:native-driver", version.ref = "sqlDelightVersion" }
-#sqldelight-coroutines-extensions = { module = "app.cash.sqldelight:coroutines-extensions", version.ref = "sqlDelightVersion" }
-
 androidx-core = { module = "androidx.core:core-ktx", version.ref = "androidxCore" }
 androidx-lifecycle-runtime = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "androidxLifecycleRuntime" }
 compose-activity = { module = "androidx.activity:activity-compose", version.ref = "composeActivity" }
@@ -35,13 +34,23 @@ compose-ui-test = { module = "androidx.compose.ui:ui-test-manifest", version.ref
 junit = { module = "junit:junit", version.ref = "junit" }
 androidx-junit = { module = "androidx.test.ext:junit", version.ref = "testJunit" }
 androidx-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espressoCore" }
-androidx-compose-junit = { module = "androidx.compose.ui:ui-test-junit", version.ref = "uiJunit" }
+androidx-compose-junit = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "uiJunit" }
+hilt = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
+hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hilt" }
+retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+moshi = { module = "com.squareup.retrofit2:converter-moshi", version.ref = "moshi" }
+sqldelight-runtime = { module = "app.cash.sqldelight:runtime", version.ref = "sqlDelightVersion" }
+sqldelight-coroutines-extensions = { module = "app.cash.sqldelight:coroutines-extensions", version.ref = "sqlDelightVersion" }
+sqldelight-android-driver = { module = "app.cash.sqldelight:android-driver", version.ref = "sqlDelightVersion" }
+sqldelight-sqlite-driver = { module = "app.cash.sqldelight:sqlite-driver", version.ref = "sqlDelightVersion" }
 
 #***************************************************************************************************
 
 [plugins]
-#sqldelight = { id = "app.cash.sqldelight", version.ref = "sqlDelightVersion" }
 android-application = { id = "com.android.application", version.ref = "android" }
 android-library = { id = "com.android.library", version.ref = "android" }
 kotlin = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
+kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kapt" }
+sqldelight = { id = "app.cash.sqldelight", version.ref = "sqlDelightVersion" }
